@@ -1,3 +1,11 @@
+2024-11-28 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* sim/ucsim/src/sims/f8.src/glob.cc,
+	  sim/ucsim/src/sims/f8.src/ialu.cc:
+	  Fix simulation of msk instruction.
+	* src/f8/gen.c:
+	  Use msk instruction in codegen for bit-field writes.
+
 2024-11-27 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* sdas/asf8/f8mch.c,
